# xmacro_example

./: CMakeLists.txt  README.md  enum_utility.hpp  example.cpp  msgcode.cpp  msgcode.hpp
